[package]
name = "envoy"
version = "0.1.0"
edition = "2021"
authors = ["James Roark <insomnocrat@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/insomnocrat/envoy"
repository = "https://github.com/insomnocrat/envoy"
keywords = ["http", "api", "web", "parse"]
categories = ["Authentication", "Network programming", "Rust patterns", "Web programming", "API bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rustls = "*"
webpki-roots = "*"
serde = { version = "*", features = ["derive"], optional = true }
chrono = "*"
serde_json = {version = "*", optional = true}
base64 = "*"
convert_case = {version = "*", optional = true}
hpack = {version = "*", optional = true}
rand = {version = "*", optional = true}


[features]
default = ["rest", "multipart"]
rest = ["serde_json", "serde"]
multihost = []
http2 = ["hpack"]
interpreter = ["rest", "convert_case"]
multipart = ["rand", "rest"]